--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -142,6 +142,37 @@
     }
 }
 
+#press{
+    animation: pressup .25s ease-in-out forwards;
+}
+
+#unpress{
+    animation: pressdown .25s ease-in-out forwards;
+}
+
+@keyframes pressup{
+    0%{
+        transform: translateY(5px);
+    }
+    70%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+@keyframes pressdown{
+    0%{
+        transform: translateY(0px);
+    }
+    70%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(5px);
+    }
+}
 
 
 @media(max-width: 900px) {
@@ -179,7 +210,7 @@
         z-index: 999;
         align-items: center;
         flex-direction: column;
-        transform: translateY(-350px);
+        transform: translateY(-400px);
         transition: all .35s ease-in-out;
         z-index: -1;
 
