--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -72,13 +72,13 @@
 
 .account-container {
     opacity: 1;
-    transform: translateX(-50%) scale(1) !important;
+    transform: translateX(-50%) scale(1);
     transition: .3s all ease-in-out;
 }
 
 .account-container-hide {
     opacity: 0;
-    transform: translateX(-50%) scale(0.7) !important;
+    transform: translateX(-50%) scale(0.7);
     transition: .3s all ease-in-out;
 }
 
